--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,4 @@ export(stat_lorenz_generalized)
 importFrom(ggplot2,Stat)
 importFrom(ggplot2,ggproto)
 importFrom(ggplot2,layer)
+importFrom(ineq,Lc)
