--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ LazyData: true
 URL: https://github.com/jjchern/gglorenz
 BugReports: https://github.com/jjchern/gglorenz/issues
 RoxygenNote: 6.0.1
+Imports: ggplot2,
+    ineq
