--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: gglorenz
-Title: Plotting Lorenz Curve with the Blessing of ggplot2
+Title: Plotting Lorenz Curve with the Blessing of 'ggplot2'
 Version: 0.0.1
 Authors@R: c(
         person("JJ", "Chen", email = "jiajia.chern@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-8482-8398"))
            )
 Description: Provides statistical transformations for plotting empirical 
-    ordinary Lorenz curve and generalized Lorenz curve.
+    ordinary Lorenz curve (Lorenz 1905) <doi:10.2307/2276207> and 
+    generalized Lorenz curve (Shorrocks 1983) <doi:10.2307/2554117>.
 Depends:
     R (>= 3.2.0),
     ggplot2 (>= 2.2.1)
