--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,6 @@ URL: https://github.com/jjchern/gglorenz
 BugReports: https://github.com/jjchern/gglorenz/issues
 RoxygenNote: 7.1.0
 Imports: ineq
+Suggests: 
+    spelling
+Language: en-US
